# data-skills-matrix

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: config.yaml  skill_groups.yaml
data/skills/analytics/: data_analysis.yaml  product_analytics.yaml  visualization.yaml
data/skills/business/: domain.yaml  soft_skills.yaml
data/skills/compliance/: security.yaml
data/skills/engineering/: data_modeling.yaml  infrastructure.yaml  orchestration.yaml  programming.yaml
data/skills/ml/: machine_learning.yaml
data/skills/ops/: data_ops.yaml  data_quality.yaml  optimization.yaml
data/skills/soft_skills/: soft_skills.yaml
scripts/: build-data.mjs  build_web_data.py  check-data.mjs  check_web_data.py  validate-data.mjs
src/skills_matrix/: __init__.py  cli.py  exceptions.py  generator.py  loader.py  models.py  styles.py
tests/: __init__.py  conftest.py  test_generator.py  test_loader.py  test_models.py  test_styles.py
web/: .prettierignore  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json  vitest.config.ts
web/src/: app.css  app.html
web/src/lib/: index.ts
web/src/lib/components/: CategoryPicker.svelte  CategoryPicker.test.ts  ExportButtons.svelte  LevelSuggestion.svelte  ProgressBar.svelte  ProgressBar.test.ts  RadarChart.svelte  ResultsSummary.svelte  RoleProfileByCategory.svelte  RoleSelector.svelte  (+5 more)
web/src/routes/: +layout.svelte  +page.svelte
web/static/data/: skills-data.json
(+8 files in other folders)
